# skaff-rag-accelerator

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  authentication.py  catalog-info.yaml  doc_generation.py  docker-compose.yaml  document_store.py  index.html  lel.py  load_documents.ipynb  main.py  mkdocs.yaml  mkdocs.yml  model.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  test_sla.ipynb  user_management.py
.github/workflows/: ci.yaml  deploy_docs.yaml
.skaff/: skaff.yaml
.streamlit/: config.toml
app/: app.py
app/lib/: chatbot.py
backend/: Dockerfile  __init__.py  _logs.py  authentication.py  backend_.py  chatbot.py  config.py  config.yaml  config_renderer.py  database.py  db_init.sql  document_loader.py  document_store.py  embedding.py  ingest.py  llm.py  logger.py  main.py  model.py  models_config.yaml  requirements.txt  user_management.py
backend/api_plugins/: __init__.py  insecure_authentication.py  secure_authentication.py  sessions.py
backend/api_plugins/insecure_authentication/: insecure_authentication.py  users_tables.sql
backend/api_plugins/lib/: user_management.py
backend/api_plugins/secure_authentcation/: secure_authentication.py
backend/api_plugins/secure_authentication/: secure_authentication.py
backend/api_plugins/sessions/: sessions.py  sessions_tables.sql
backend/backend/: index.html
backend/chains/basic_chain/: index.html
backend/chains/chain_with_memory/: index.html
backend/chains/chains/: index.html
backend/plugins/authentication/: index.html
backend/plugins/conversational_rag_plugin/: index.html
backend/plugins/plugins/: index.html
backend/plugins/sessions/: index.html
backend/plugins/user_based_sessions/: index.html
backend/rag_components/: chain.py  chat_message_history.py  config_renderer.py  document_loader.py  embedding.py  llm.py  logging_callback_handler.py  main.py  prompts.py  rag.py  rag_tables.sql  retriever.py  streaming_callback_handler.py  vector_store.py
backend/rag_components/chain_links/: answer_question_from_docs_and_history.py  condense_question.py  documented_runnable.py  rag_basic.py  rag_with_history.py  retrieve_and_format_docs.py
backend/rag_components/matching_engine/: get_matching_engine.py  matching_engine_utils.py
backend/rag_ragconfig/: index.html
cookbook/configs/databases_configs/: index.html
cookbook/configs/embedding_models_configs/: index.html
cookbook/configs/llms_configs/: index.html
cookbook/configs/vector_stores_configs/: index.html
cookbook/cookbook/: index.html
cookbook/extend_ragconfig/: index.html
cookbook/loading_documents/: index.html
data_sample/: add_data_sample_to_rag.py
database/: database.py  database.sqlite  database_init.sql  index.html
deployment/admin_mode/: index.html
docs/: admin_mode.md  cookbook.md  database.md  doc_generation.py  frontend.md  getting_started.md  index.md  loading_documents.md  rag_config.md  rag_object.md  recipe_databases_configs.md  recipe_embedding_models_configs.md  recipe_llms_configs.md  recipe_vector_stores_configs.md
docs/backend/: backend.md  rag_ragconfig.md
docs/backend/chains/: basic_chain.md  chain_with_memory.md  chains.md
docs/backend/plugins/: authentication.md  conversational_rag_plugin.md  plugins.md  user_based_sessions.md
docs/cookbook/: cookbook.md  extend_ragconfig.md  loading_documents.md
docs/cookbook/configs/: databases_configs.md  llms_configs.md  vector_stores_configs.md
docs/deployment/: admin_mode.md
examples/: load_documents.ipynb
frontend/: Dockerfile  __init__.py  app.py  front.py  index.html  requirements.txt
frontend/lib/: auth.py  backend.py  backend_interface.py  basic_chat.py  chat.py  session_chat.py  sidebar.py  streamlit_helpers.py
interface/: app.py
interface/lib/: auth.py  chatbot.py
lib/: backend.py  main.py  user_management.py
notebooks/: docs_loader.ipynb  memory_tests.ipynb  test_auth.ipynb  test_sla.ipynb
sandbox_alexis/: main.py  storage_backend.py  text_splitter.py  vector_store.py
search/: search_index.json
tests/: test_api.py  test_feedback.py  test_users.py
