[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-as-a-service"
authors = [
  { name = "sarah-lauzeral", email = "sarah.lauzeral@artefact.com" },
] # TODO: Add more authors if collaborators are added
description = "rag-as-a-service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/artefactory-fr/rag-as-a-service"
"Documentation" = "https://artefactory-fr.github.io/rag-as-a-service"

[tool.setuptools]
packages = ["lib", "config", "tests"]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "Q",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D100", "D103", "D203", "D213", "ANN101", "ANN102"]
line-length = 140
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B104"]

[tool.poetry]
name = "rag-as-a-service"
version = "0.0.1"
description = ""
authors = ["sarah-lauzeral"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
argon2-cffi = "^23.1.0"
chromadb = "^0.4.24"
dbutils = "^3.1.0"
extra-streamlit-components = "^0.1.71"
httpx-sse = "^0.4.0"
humanize = "^4.9.0"
hydra-core = "^1.3.2"
ipython = "^8.22.2"
langchain = "^0.1.11"
langchain-experimental = "^0.0.53"
langchain-openai = "^0.0.8"
langserve = "^0.0.46"
openai = "^1.13.3"
pydantic = "^1.10.14"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
sqlglot = "^23.0.5"
sse-starlette = "^2.0.0"
streamlit = "^1.32.2"
tenacity = "^8.2.3"
pypdf = "^4.2.0"
