[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-as-a-service"
authors = [
  { name = "sarah-lauzeral", email = "sarah.lauzeral@artefact.com" },
] # TODO: Add more authors if collaborators are added
description = "rag-as-a-service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/artefactory-skaff/skaff-rag-accelerator"
"Documentation" = "https://artefactory-skaff.github.io/skaff-rag-accelerator/"

[tool.setuptools]
packages = ["lib", "config", "tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "N", # pep8-naming
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "PD", # pandas-vet
] # See: https://docs.astral.sh/ruff/rules/
ignore = ["D100", "D103", "D203", "D213", "ANN101", "ANN102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B104"]
